# bootcamp-lamoda

./: .env.example  MIGRATION_GUIDE.md  Makefile  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  README_OPENAI.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  app.py  example_usage.py  name_tags.jsonl  pyproject.toml  run_demo.py  run_demo_noapi.py  run_pipeline_openai.py
examples/: example_basic_inference.py  example_pipeline.py  mock_client.py
notebooks/: 01 experiment.ipynb  02 EDA.ipynb  02 baseline-clustering-product-type.ipynb  03 clustering.ipynb  get_one_example.ipynb  lamoda_full_baseline.ipynb  name_tags.jsonl
src/: __init__.py  config.py  data_loader.py  example_pipeline_usage.py  example_usage.py  inference.py  llm_client.py  llm_inference.py  main.py  openai_client.py  pipeline.py  postprocessing.py  preprocessing.py  prompt_builder.py  vector_pipeline.py
src/clients/: __init__.py  llm_client.py  openai_client.py
src/core/: __init__.py  pipeline.py  tag_inference.py
src/parse_url/: parser.py
src/utils/: __init__.py
