[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "lamoda_bootcamp"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "pip",
    "python-dotenv",
    "ruff",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "hdbscan (>=0.8.41,<0.9.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "pymorphy2 (>=0.9.1,<0.10.0)",
    "scikit-learn (>=1.0.0,<2.0.0)",
    "setuptools",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (>=2.9.1,<3.0.0) ; sys_platform == \"macosx_11_0_arm64\"",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["lamoda_bootcamp"]
include = ["pyproject.toml", "lamoda_bootcamp/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["lamoda_bootcamp"]
force-sort-within-sections = true

