[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bootcamp-lamoda"
version = "0.1.0"
description = "Lamoda reviews → tags (LLM + vector + Streamlit)"
authors = [
  { name = "Artem" }
]
readme = "README.md"
requires-python = ">=3.10,<3.12"

# только действительно нужные зависимости, без полного pip freeze
dependencies = [
  "numpy>=1.26,<3.0",
  "pandas>=2.1,<3.0",
  "scikit-learn>=1.3,<2.0",
  "sentence-transformers>=2.3,<3.0",
  "tqdm>=4.66,<5.0",
  "streamlit>=1.30,<2.0",
  "openai>=1.0,<3.0",
  "requests>=2.31,<3.0",
  "python-dotenv>=1.0,<2.0",
  "PyYAML>=6.0,<7.0",
  "beautifulsoup4>=4.12,<5.0",
  "hdbscan>=0.8,<0.9",
]

[project.optional-dependencies]
dev = [
  "black>=23.0",
  "ruff>=0.3.0",
  "pytest>=7.0",
]

[tool.setuptools.packages.find]
exclude = ["notebooks*", "tests*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88